# tiktok-captcha-solver

./: .gitignore  :w  README.md  get_captcha.py  new_puzzle.html  new_rotate.html  new_shapes.html  pyproject.toml  pyrightconfig.json  rotate_example.py  success_selector.txt  test.html
..bfg-report/2025-06-09/05-26-40/: cache-stats.txt  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md
src/tiktok_captcha_solver/: __init__.py  api.py  asyncplaywrightsolver.py  asyncsolver.py  captchatype.py  download_crx.py  downloader.py  geometry.py  launcher.py  models.py  nodriversolver.py  playwrightsolver.py  selectors.py  seleniumsolver.py  solver.py  spline.py
src/tiktok_captcha_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: Local State  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
test/Default/: .com.google.Chrome.JG4BOD  Account Web Data  Affiliation Database  BrowsingTopicsState  Cookies  Cookies-journal  DIPS  DIPS-wal  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Reporting and NEL-journal  Top Sites  TransportSecurity  Web Data
test/GrShaderCache/: data_0  data_1  f_000001  index
test/GraphiteDawnCache/: data_1  index
test/ShaderCache/: data_1  index
test/WidevineCdm/: latest-component-updated-widevine-cdm
test/component_crx_cache/: metadata.json
test/segmentation_platform/: ukm_db
tiktok_captcha_solver/: api.py  downloader.py  models.py  sadcaptcha.py
tiktok_captcha_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tiktok_captcha_solver/tests/: test_sadcaptcha.py
(+1144 files in other folders)
